Fix T55555: Crash when select material properties

This error is only in Windows and Mac when select in properties the material tab.

This commit revert dc856be8399242f4ee3a2ce0450b7ac5a20b35f6 Preview: Add own opengl context to render preview images.